refactor(backend): stream logic
